Updated Photos descriptions

--- a/gallery.html
+++ b/gallery.html
@@ -40,33 +40,33 @@
     <div class="lightboxes">
       <div id="img1" class="lightbox">
         <a class="close" href="gallery.html" aria-label="Close">×</a>
-        <img src="images/army1_large.jpg" alt="Historic photograph 1">
-        <p class="caption">Photo 1 — Description and source info (replace with archive metadata).</p>
+        <img src="images/d.jpeg" alt="Historic photograph 1">
+        <p class="caption">Photo 1 — "Bangladesh’s Liberation War of 1971 was a nine-month struggle for independence from Pakistan, marked by mass civilian sacrifice, the heroic Mukti Bahini resistance, and the surrender of Pakistani forces on 16 December 1971 that led to the birth of an independent Bangladesh."</p>
       </div>
       <div id="img2" class="lightbox">
         <a class="close" href="gallery.html" aria-label="Close">×</a>
-        <img src="images/army2_large.jpg" alt="Historic photograph 2">
-        <p class="caption">Photo 2 — Description and source info.</p>
+        <img src="images/e.jpeg" alt="Historic photograph 2">
+        <p class="caption">Photo 2 — "The Bangladesh Liberation War (26 March–16 December 1971) arose from political disenfranchisement and cultural repression under Pakistani rule. A nationwide uprising, supported by the Mukti Bahini and aided by Indian military intervention, culminated in the surrender of occupying forces and the establishment of the independent state of Bangladesh. The conflict left deep social scars and reshaped regional politics."</p>
       </div>
       <div id="img3" class="lightbox">
         <a class="close" href="gallery.html" aria-label="Close">×</a>
-        <img src="images/army3_large.jpg" alt="Historic photograph 3">
-        <p class="caption">Photo 3 — Description and source info.</p>
+        <img src="images/f.jpeg" alt="Historic photograph 3">
+        <p class="caption">Photo 3 — "We remember the martyrs and survivors of the 1971 Liberation War — ordinary people whose courage and sacrifice won our freedom. Their memory calls us to protect human dignity, preserve truth, and build a peaceful, just Bangladesh for future generations."</p>
       </div>
       <div id="img4" class="lightbox">
         <a class="close" href="gallery.html" aria-label="Close">×</a>
-        <img src="images/army4_large.jpg" alt="Historic photograph 4">
-        <p class="caption">Photo 4 — Description and source info.</p>
+        <img src="images/g.jpg" alt="Historic photograph 4">
+        <p class="caption">Photo 4 — "The Liberation War of 1971 was a decisive struggle for self-determination that began after disputed elections and political repression. Key elements included non-cooperation movements, guerrilla resistance by the Mukti Bahini, widespread civilian suffering, and international consequences that ended with independence on 16 December 1971. Studying this period helps explain Bangladesh’s national identity and modern history."</p>
       </div>
       <div id="img5" class="lightbox">
         <a class="close" href="gallery.html" aria-label="Close">×</a>
-        <img src="images/army5_large.jpg" alt="Historic photograph 5">
-        <p class="caption">Photo 5 — Description and source info.</p>
+        <img src="images/h.jpg" alt="Historic photograph 5">
+        <p class="caption">Photo 5 — "Honoring the heroes of 1971 — their courage made Bangladesh free. #Muktijoddha #16December #Bangladesh #NeverForget"</p>
       </div>
       <div id="img6" class="lightbox">
         <a class="close" href="gallery.html" aria-label="Close">×</a>
-        <img src="images/army6_large.jpg" alt="Historic photograph 6">
-        <p class="caption">Photo 6 — Description and source info.</p>
+        <img src="images/k.jpg" alt="Historic photograph 6">
+        <p class="caption">Photo 6 — "This exhibit chronicles the 1971 Liberation War: the causes of the conflict, the grassroots liberation movement, the stories of resilience amid atrocity, and the nation-building that followed independence on 16 December 1971."</p>
       </div>
     </div>
 
